--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
+    <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"
     <title>华登区块狗介绍与注册</title>
-
     <style>
         .MathJax, .MathJax_Message, .MathJax_Preview{
             display: none
