--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 注册链接：<br>
 <a href="http://waldengoton.lifeooo.cn/user/reg.html?p=247422" rel="nofollow">http://waldengoton.lifeooo.cn/user/reg.html?p=247422</a><br>
 或手机扫描二维码：<br>
-<img src="https://img-blog.csdnimg.cn/2019042010463591.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1BVUkVITw==,size_16,color_FFFFFF,t_70" alt="在这里插入图片描述"><br>
+<img src="./image/微信图片_20190521175919.jpg" alt="在这里插入图片描述"><br>
 华登区块狗怎么下载？<br>
 安卓下载地: <a href="https://down.waldengoton.com/down/app.html" rel="nofollow">https://down.waldengoton.com/down/app.html</a><br>
 苹果下载地址1：<a href="http://mgy6hfzr.mrfanfood.cn/EpbW12" rel="nofollow">http://mgy6hfzr.mrfanfood.cn/EpbW12</a><br>
