--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
-    <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"
+    <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"/>
     <title>华登区块狗介绍与注册</title>
     <style>
         .MathJax, .MathJax_Message, .MathJax_Preview{
@@ -18,10 +18,10 @@
     <div id="article_content" class="article_content clearfix csdn-tracking-statistics" data-pid="blog" data-mod=popu_307 data-dsm="post">
 
             <p>一.华登区块狗是什么？<br>
-华登区块宠物狗是基于区块链技术开发的全球唯一性、可繁殖、会增值、可收藏且不可篡改的区块链数字宠物，每只宠物狗都是独一无二的个体，可爱、唯一、财富。<br>
-华登区块宠物狗APP作为一个集区块链宠物+社交，挖矿+交易平台，汇聚了大量知名学者、商业领袖、投资界大佬、区块链行业名人等重量级人物。涵盖区块宠物繁殖、类金融交易、线上商城、名人公益等多个层面的商业模型，有机地结合了共享经济、区块链新型经济等模式，并由规范化运营和缜密的服务细则为用户的平台行权保驾护航。华登区块宠物狗肩负让每个人投资最大价值化的愿景与使命，让数字资产交易不再停留于概念，扎实可行地创造新领域价值空间。<br>
-二.华登区块狗怎么玩？<br>
-你可以在狗狗集市，注册认证并激活账户后，通过预约并匹配成功后支付押金领养你心仪的狗狗。一旦领养后，将区块写入唯一身份，可爱的狗狗进入“休息中”状态，休息中的狗狗不可以买卖，待智能合约到期后，狗狗将强制出。<br>
+          华登区块宠物狗是基于区块链技术开发的全球唯一性、可繁殖、会增值、可收藏且不可篡改的区块链数字宠物，每只宠物狗都是独一无二的个体，可爱、唯一、财富。<br>
+          华登区块宠物狗APP作为一个集区块链宠物+社交，挖矿+交易平台，汇聚了大量知名学者、商业领袖、投资界大佬、区块链行业名人等重量级人物。涵盖区块宠物繁殖、类金融交易、线上商城、名人公益等多个层面的商业模型，有机地结合了共享经济、区块链新型经济等模式，并由规范化运营和缜密的服务细则为用户的平台行权保驾护航。华登区块宠物狗肩负让每个人投资最大价值化的愿景与使命，让数字资产交易不再停留于概念，扎实可行地创造新领域价值空间。<br>
+          二.华登区块狗怎么玩？<br>
+          你可以在狗狗集市，注册认证并激活账户后，通过预约并匹配成功后支付押金领养你心仪的狗狗。一旦领养后，将区块写入唯一身份，可爱的狗狗进入“休息中”状态，休息中的狗狗不可以买卖，待智能合约到期后，狗狗将强制出。<br>
 在狗狗集市场里成功领养了狗狗，不但可以得到合约的工资，还可以获得相应的狗狗币DOGE及等值的华登高通发行的珠宝链-华高链WIA。<br>
 三.华登区块狗每只多少钱？<br>
 华登区块狗每只的价钱在100至15000之间，分成5种狗：<br>
