--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
     <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"/>
-    <title>华登区块狗介绍与注册</title>
+    <title>华登区块狗注册与下载</title>
     <style>
         .MathJax, .MathJax_Message, .MathJax_Preview{
             display: none
@@ -14,51 +14,49 @@
 
 
 
-  <article class="baidu_pl" style="margin:20px 40px; line-height: 30px;">
+  <article class="baidu_pl" style="margin:20px 40px;">
     <div id="article_content" class="article_content clearfix csdn-tracking-statistics" data-pid="blog" data-mod=popu_307 data-dsm="post">
 
-            <p>一.华登区块狗是什么？<br>
-          华登区块宠物狗是基于区块链技术开发的全球唯一性、可繁殖、会增值、可收藏且不可篡改的区块链数字宠物，每只宠物狗都是独一无二的个体，可爱、唯一、财富。<br>
-          华登区块宠物狗APP作为一个集区块链宠物+社交，挖矿+交易平台，汇聚了大量知名学者、商业领袖、投资界大佬、区块链行业名人等重量级人物。涵盖区块宠物繁殖、类金融交易、线上商城、名人公益等多个层面的商业模型，有机地结合了共享经济、区块链新型经济等模式，并由规范化运营和缜密的服务细则为用户的平台行权保驾护航。华登区块宠物狗肩负让每个人投资最大价值化的愿景与使命，让数字资产交易不再停留于概念，扎实可行地创造新领域价值空间。<br>
-          二.华登区块狗怎么玩？<br>
-          你可以在狗狗集市，注册认证并激活账户后，通过预约并匹配成功后支付押金领养你心仪的狗狗。一旦领养后，将区块写入唯一身份，可爱的狗狗进入“休息中”状态，休息中的狗狗不可以买卖，待智能合约到期后，狗狗将强制出。<br>
-在狗狗集市场里成功领养了狗狗，不但可以得到合约的工资，还可以获得相应的狗狗币DOGE及等值的华登高通发行的珠宝链-华高链WIA。<br>
-三.华登区块狗每只多少钱？<br>
-华登区块狗每只的价钱在100至15000之间，分成5种狗：<br>
-普登是100至300之间，<br>
-勇登是301至900之间，<br>
-卓登是901至2500之间，<br>
-稀登是2501至6000之间，<br>
-承登是6001至15000之间。<br>
-每天下午开始抢狗，有9个时间点：14:00 15:00、16:30、17:00、17:30、19:30、 20:00、20:30、21:00。<br>
-记得提前预约和定好闹钟哦！</p>
-<p>华登区块狗好不好抢？<br>
-1、提前预约！（反正没抢到的，微分会退还）。<br>
-2、每个时间起点前，都会有90秒倒计时！读秒到10的时候刷新页面（戳左下角“狗狗集市”），读到5秒时开始频繁点击，直至到时！页面开始显现“黄框翻转”。<br>
-3、如果瞬间抢狗的人多，系统有可能瞬间卡住，你就退出等待2分钟重进app，然后再查“领养记录”看有没有抢到狗。<br>
-狗狗每日领养时间：14:00 15:00、16:30、17:00、17:30、19:30、 20:00、20:30、21:00。<br>
-六.华登区块狗注册链接，华登区块狗怎么注册？<br>
-华登区块狗注册操作流程：<br>
-1、注册并填写个人信息，一证一号，需手机短信验证；<br>
-2、注册成功后，必须绑定两个以上（包括两个）的收款码，不然实名认证审核通过不了;<br>
-3、实名认证审核通后，购买30微分即可激活；<br>
-注册链接：<br>
-<a href="http://waldengoton.lifeooo.cn/user/reg.html?p=247422" rel="nofollow">http://waldengoton.lifeooo.cn/user/reg.html?p=247422</a><br>
-或手机扫描二维码：<br>
-<img src="./image/微信图片_20190521175919.jpg" alt="在这里插入图片描述"><br>
-华登区块狗怎么下载？<br>
-安卓下载地: <a href="https://down.waldengoton.com/down/app.html" rel="nofollow">https://down.waldengoton.com/down/app.html</a><br>
-苹果下载地址1：<a href="http://mgy6hfzr.mrfanfood.cn/EpbW12" rel="nofollow">http://mgy6hfzr.mrfanfood.cn/EpbW12</a><br>
-苹果下载地址2：<a href="http://icb4t.39z.xindelong.com.cn/bazZM" rel="nofollow">http://icb4t.39z.xindelong.com.cn/bazZM</a><br>
-如果下载不了是因为：手机默认拦截其不认识的软件下载，一般需要在“设置”-“通用”里更改。不同品牌手机的设置有些不同，请自己百度。<br>
-（华登高通区块狗添加微信号：ZHTing6666）<br>
-注：添加微信请备注-华登区块狗</p>
+          <h4>一.华登区块狗是什么？</h4>
+          <p>华登区块宠物狗是基于区块链技术开发的全球唯一性、可繁殖、会增值、可收藏且不可篡改的区块链数字宠物，每只宠物狗都是独一无二的个体，可爱、唯一、财富。
+          华登区块宠物狗APP作为一个集区块链宠物+社交，挖矿+交易平台，汇聚了大量知名学者、商业领袖、投资界大佬、区块链行业名人等重量级人物。涵盖区块宠物繁殖、类金融交易、线上商城、名人公益等多个层面的商业模型，有机地结合了共享经济、区块链新型经济等模式，并由规范化运营和缜密的服务细则为用户的平台行权保驾护航。华登区块宠物狗肩负让每个人投资最大价值化的愿景与使命，让数字资产交易不再停留于概念，扎实可行地创造新领域价值空间。</p>
+          <h4>二.华登区块狗怎么玩？</h4>
+          <p>你可以在狗狗集市，注册认证并激活账户后，通过预约并匹配成功后支付押金领养你心仪的狗狗。一旦领养后，将区块写入唯一身份，可爱的狗狗进入“休息中”状态，休息中的狗狗不可以买卖，待智能合约到期后，狗狗将强制出。</p>
+          <p>在狗狗集市场里成功领养了狗狗，不但可以得到合约的工资，还可以获得相应的狗狗币DOGE及等值的华登高通发行的珠宝链-华高链WIA。</p>
+          <h4>三.华登区块狗每只多少钱？</h4>
+          <p>华登区块狗每只的价钱在100至15000之间，分成5种狗：</p>
+          <p>普登是100至300之间，</p>
+          <p>勇登是301至900之间，</p>
+          <p>卓登是901至2500之间，</p>
+          <p>稀登是2501至6000之间，</p>
+          <p>承登是6001至15000之间。</p>
+          <p>每天下午开始抢狗，有9个时间点：14:00 15:00、16:30、17:00、17:30、19:30、 20:00、20:30、21:00。
+          记得提前预约和定好闹钟哦！</p>
+          <p>华登区块狗好不好抢？</p>
+          <p>1、提前预约！（反正没抢到的，微分会退还）。</p>
+          <p>2、每个时间起点前，都会有90秒倒计时！读秒到10的时候刷新页面（戳左下角“狗狗集市”），读到5秒时开始频繁点击，直至到时！页面开始显现“黄框翻转”。</p>
+          <p>3、如果瞬间抢狗的人多，系统有可能瞬间卡住，你就退出等待2分钟重进app，然后再查“领养记录”看有没有抢到狗。
+          狗狗每日领养时间：14:00 15:00、16:30、17:00、17:30、19:30、 20:00、20:30、21:00。</p>
+          <h4>四.华登区块狗注册链接，华登区块狗怎么注册？</h4>
+          <p>华登区块狗注册操作流程：</p>
+          <p>1、注册并填写个人信息，一证一号，需手机短信验证；</p>
+          <p>2、注册成功后，必须绑定两个以上（包括两个）的收款码，不然实名认证审核通过不了;</p>
+          <p>3、实名认证审核通后，购买30微分即可激活；</p>
+          <h4>注册链接：</h4>
+          <p><a href="http://waldengoton.lifeooo.cn/user/reg.html?p=247422" rel="nofollow">http://waldengoton.lifeooo.cn/user/reg.html?p=247422</a></p>
+          <p>或手机扫描二维码：</p>
+          <img src="./image/微信图片_20190521175919.jpg" alt="在这里插入图片描述"><br>
+          <h4>华登区块狗怎么下载？</h4>
+          <p>安卓下载地: <a href="https://down.waldengoton.com/down/app.html" rel="nofollow">https://down.waldengoton.com/down/app.html</a></p>
+          <p>苹果下载地址1：<a href="http://mgy6hfzr.mrfanfood.cn/EpbW12" rel="nofollow">http://mgy6hfzr.mrfanfood.cn/EpbW12</a></p>
+          <p>苹果下载地址2：<a href="http://icb4t.39z.xindelong.com.cn/bazZM" rel="nofollow">http://icb4t.39z.xindelong.com.cn/bazZM</a></p>
+          <p>如果下载不了是因为：手机默认拦截其不认识的软件下载，一般需要在“设置”-“通用”里更改。不同品牌手机的设置有些不同，请自己百度。</p>
+          <p>（华登高通区块狗添加微信号：ZHTing6666）</p>
+          <p>注：添加微信请备注-华登区块狗</p>
 
           </div>
           <link href="https://csdnimg.cn/release/phoenix/mdeditor/markdown_views-258a4616f7.css" rel="stylesheet">
-                  </div>
   </article>
-</div>
 
 
 </div>
