--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,60 @@
-1111
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
+    <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"/>
+    <title>蜜蜂乐园注册与下载</title>
+    <style>
+        .MathJax, .MathJax_Message, .MathJax_Preview{
+            display: none
+        }
+    </style>
+</head>
+<body class="nodata "> 
+
+
+
+  <article class="baidu_pl" style="margin:20px 40px; line-height: 30px;">
+    <div id="article_content" class="article_content clearfix csdn-tracking-statistics" data-pid="blog" data-mod=popu_307 data-dsm="post">
+
+		<h4>一、蜜蜂乐园是什么?</h4>
+		<p>蜜蜂乐园是由安太斯中国有限公司独立发行，是一个源代码基础来源于以太坊的新平台，是全球领先的区块链商品和信息平台。该平台旨在通过创建一种叫做AH的新型数字加密货币，以及一个叫做AH市场的集成在线市场，来实现生物产业的大众化和革命性突破。以区块链为媒介，分布式去中心化打造一个数字资产交易平台，应用区块链技术构造一个既可以自我循环、也可以向外拓展的可信任分布式商业生态环境同时也是为线下的社会财富流通带来更有利的价值，并且AH币未来的应用场景更能被无限扩大，应用到生物科技，酒店，金融等各领域。</p>
+
+        <h4>二、蜜蜂概述</h4>
+		<p>蜜蜂乐园由8大区块组成，每一个区块都是唯一化，每一个区块都代表着财富、诚信、团队，分布式“去中心化”建设，打造出一个AH数字资产交易平台。
+		里面有8种蜜蜂：中蜂 、意蜂 、黑峰、卡蜂、苏拉维西蜂、绿努蜂 、高加索蜂、 喜马拉。</p>
+
+		<img src="./image/微信图片_20190512200752.png" alt="收益表"/>
+
+		<h4>三、交易流程</h4>
+		<p>1、激活账号并有足够的蜂箱（激活账号需购买100蜂箱-在线充值或向推荐人购买）</p>
+		<p>2、相应时间段抢购区块蜜蜂（暂扣相应的蜂箱）</p>
+		<p>3、认购成功区块蜜蜂（即时扣除相应的蜂箱）</p>
+		<p>4、订单交易完成后，按照相应区块收益及时长计算</p>
+		<p>5、对方用户获取相应诚信金，反之受罚，严重者封禁账号</p>
+		<p>7、收益时长到期，系统自动在该区块售卖（如此循环，每个区块宠物不高于区块最高价值，一旦高于，区块会自动计算拆分三份售卖）
+		在线一对一交易，6：1比例匹配，平台不涉及不参与资金，透明化，买卖双方确认交易无误，系统自动放行订单</p>
+
+		<h4>四、风控保障</h4>
+		<p>认购成功之后根据卖方订单信息，在2小时内打款，并且需要上传图片凭证 ，双方确认无误交易完成；卖方在2小时内未确认系统核实之后，自动转移区块蜜蜂到打款者账户，对未及时确认的用户罚款100元/次，严重者封禁账号。（特殊情况需事实说明）如未打款系统核实之后，封禁账号，扣除该用户推荐人的所产生的应得奖金（特殊情况需事实说明），系统自动撤销订单，并在下一时间段区块出售。 在2小时内打款多得5%的收益，例：A用户收款10000元，B用户2小时内打款奖励诚信金5%，B用户账户合约收益立得5%即500元。</p>
+
+		<h4>五、注册方式</h4>
+		<p>点击链接：http://amtex.3ats.com/PluginView/Qt/phone/8/register.html?recommendOID=40415ca2eba44f3c87c26473e12d5f5d</p>
+
+		<p>或扫码注册</p>
+
+		<img src="./image/微信图片_20190512200844.jpg" alt="二维码注册"/>
+
+		<p>蜜蜂乐园注册与下载</p>
+
+		<h4>下载地址：</h4>
+
+		<p>APP下载地址一（安卓苹果共用）：https://cw.pub/amtex</p>
+
+		<p>APP下载地址二（安卓苹果共用）：https://cw.pub/amtexs</p>
+
+		<p>（激活添加微信号：Seven-lit）</p>
+    </div>
+  </article>
+</body>
+</html>
