--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <article class="baidu_pl" style="margin:20px 40px;">
     <div id="article_content" class="article_content clearfix csdn-tracking-statistics" data-pid="blog" data-mod=popu_307 data-dsm="post">
-
+          <h1 style="text-align:center;">华登区块狗注册与下载</h1>
           <h4>一.华登区块狗是什么？</h4>
           <p>华登区块宠物狗是基于区块链技术开发的全球唯一性、可繁殖、会增值、可收藏且不可篡改的区块链数字宠物，每只宠物狗都是独一无二的个体，可爱、唯一、财富。
           华登区块宠物狗APP作为一个集区块链宠物+社交，挖矿+交易平台，汇聚了大量知名学者、商业领袖、投资界大佬、区块链行业名人等重量级人物。涵盖区块宠物繁殖、类金融交易、线上商城、名人公益等多个层面的商业模型，有机地结合了共享经济、区块链新型经济等模式，并由规范化运营和缜密的服务细则为用户的平台行权保驾护航。华登区块宠物狗肩负让每个人投资最大价值化的愿景与使命，让数字资产交易不再停留于概念，扎实可行地创造新领域价值空间。</p>
