--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,8 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
-    <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"/>
+    <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块蜂,蜜蜂乐园等" />
+    <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块蜂,蜜蜂乐园"/>
     <title>蜜蜂乐园注册与下载</title>
     <style>
         .MathJax, .MathJax_Message, .MathJax_Preview{
