--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
             display: none
         }
     </style>
+    
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?097eceb9c2c39b8b7ac33749ec090957";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
 </head>
 <body class="nodata "> 
 
@@ -60,5 +70,6 @@
 
 
 </div>
+
 </body>
 </html>
