--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             display: none
         }
     </style>
-    
+
     <script>
       var _hmt = _hmt || [];
       (function() {
@@ -65,6 +65,9 @@
           <p>注：添加微信请备注-华登区块狗</p>
 
           </div>
+
+          <p>同样类型:<a href="index1.html">蜜蜂乐园</a></p>
+          
           <link href="https://csdnimg.cn/release/phoenix/mdeditor/markdown_views-258a4616f7.css" rel="stylesheet">
   </article>
 
