--- a/index1.html
+++ b/index1.html
@@ -4,10 +4,12 @@
     <title>蜜蜂乐园注册与下载</title>
     <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块蜂,蜜蜂乐园"/>
     <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块蜂,蜜蜂乐园等" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
     <style>
         .MathJax, .MathJax_Message, .MathJax_Preview{
             display: none
         }
+        h2{font-size:18px;}
     </style>
 
 	<script>
