--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,11 @@
         .MathJax, .MathJax_Message, .MathJax_Preview{
             display: none
         }
-        h2{font-size:18px;}
+
+        h1{font-size:18px;}
+        h2{font-size:16px;}
+        p{font-size:14px;}
+        img{width:100%;}
     </style>
 
 	<script>
