--- a/index1.html
+++ b/index1.html
@@ -55,7 +55,7 @@
 		<p>认购成功之后根据卖方订单信息，在2小时内打款，并且需要上传图片凭证 ，双方确认无误交易完成；卖方在2小时内未确认系统核实之后，自动转移区块蜜蜂到打款者账户，对未及时确认的用户罚款100元/次，严重者封禁账号。（特殊情况需事实说明）如未打款系统核实之后，封禁账号，扣除该用户推荐人的所产生的应得奖金（特殊情况需事实说明），系统自动撤销订单，并在下一时间段区块出售。 在2小时内打款多得5%的收益，例：A用户收款10000元，B用户2小时内打款奖励诚信金5%，B用户账户合约收益立得5%即500元。</p>
 
 		<h2>五、注册方式</h2>
-		<p>点击链接：http://amtex.3ats.com/PluginView/Qt/phone/8/register.html?recommendOID=40415ca2eba44f3c87c26473e12d5f5d</p>
+		<p>点击链接：<a href="http://amtex.3ats.com/PluginView/Qt/phone/8/register.html?recommendOID=40415ca2eba44f3c87c26473e12d5f5d" rel="nofollow">http://amtex.3ats.com/PluginView/Qt/phone/8/register.html?recommendOID=40415ca2eba44f3c87c26473e12d5f5d</a></p>
 
 		<p>或扫码注册</p>
 
@@ -65,9 +65,9 @@
 
 		<h2>下载地址：</h2>
 
-		<p>APP下载地址一（安卓苹果共用）：https://cw.pub/amtex</p>
+		<p>APP下载地址一（安卓苹果共用）：<a href="https://cw.pub/amtex" rel="nofollow">https://cw.pub/amtex</a></p>
 
-		<p>APP下载地址二（安卓苹果共用）：https://cw.pub/amtexs</p>
+		<p>APP下载地址二（安卓苹果共用）：<a href="https://cw.pub/amtexs" rel="nofollow">https://cw.pub/amtexs</a></p>
 
 		<p>（激活添加微信号：Seven-lit）</p>
     </div>
