关键字添加

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <title>华登区块狗注册与下载</title>
-    <meta name="keywords" content="sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"/>
-    <meta name="Description" content="sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
+    <meta name="keywords" content="华登区块狗注册,华登区块狗下载,华登区块狗注册操作流程,sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"/>
+    <meta name="Description" content="华登区块狗注册,华登区块狗下载,华登区块狗注册操作流程,sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
     <style>
         .MathJax, .MathJax_Message, .MathJax_Preview{
