--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="zh-CN">
+<!--<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>华登区块狗注册与下载</title>
@@ -81,4 +81,4 @@
 </div>
 
 </body>
-</html>
+</html>-->
