--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!--<html lang="zh-CN">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>华登区块狗注册与下载</title>
-    <meta name="keywords" content="华登区块狗注册,华登区块狗下载,华登区块狗注册操作流程,sevenxd,博客,个人博客,区块链,区块狗,华登区块狗"/>
-    <meta name="Description" content="华登区块狗注册,华登区块狗下载,华登区块狗注册操作流程,sevenxd,个人网站博客,推荐各种区块链,其中区块狗,华登区块狗等" />
+    <title>好省APP注册与下载</title>
+    <meta name="keywords" content="好省APP注册,好省APP下载,好省APP注册操作流程,sevenxd,博客,个人博客,购物商场,优惠券,购物返佣"/>
+    <meta name="Description" content="好省APP注册,好省APP下载,好省APP注册操作流程,sevenxd,博客,个人博客,购物商场,优惠券,购物返佣" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
     <style>
         .MathJax, .MathJax_Message, .MathJax_Preview{
@@ -32,48 +32,44 @@
 
   <article class="baidu_pl" style="margin:20px 40px;">
     <div id="article_content" class="article_content clearfix csdn-tracking-statistics" data-pid="blog" data-mod=popu_307 data-dsm="post">
-          <h1 style="text-align:center;font-size:1.5em;">华登区块狗注册与下载</h1>
-          <h2>一.华登区块狗是什么？</h2>
-          <p>华登区块宠物狗是基于区块链技术开发的全球唯一性、可繁殖、会增值、可收藏且不可篡改的区块链数字宠物，每只宠物狗都是独一无二的个体，可爱、唯一、财富。
-          华登区块宠物狗APP作为一个集区块链宠物+社交，挖矿+交易平台，汇聚了大量知名学者、商业领袖、投资界大佬、区块链行业名人等重量级人物。涵盖区块宠物繁殖、类金融交易、线上商城、名人公益等多个层面的商业模型，有机地结合了共享经济、区块链新型经济等模式，并由规范化运营和缜密的服务细则为用户的平台行权保驾护航。华登区块宠物狗肩负让每个人投资最大价值化的愿景与使命，让数字资产交易不再停留于概念，扎实可行地创造新领域价值空间。</p>
-          <h2>二.华登区块狗怎么玩？</h2>
-          <p>你可以在狗狗集市，注册认证并激活账户后，通过预约并匹配成功后支付押金领养你心仪的狗狗。一旦领养后，将区块写入唯一身份，可爱的狗狗进入“休息中”状态，休息中的狗狗不可以买卖，待智能合约到期后，狗狗将强制出。</p>
-          <p>在狗狗集市场里成功领养了狗狗，不但可以得到合约的工资，还可以获得相应的狗狗币DOGE及等值的华登高通发行的珠宝链-华高链WIA。</p>
-          <h2>三.华登区块狗每只多少钱？</h2>
-          <p>华登区块狗每只的价钱在100至15000之间，分成5种狗：</p>
-          <p>普登是100至300之间，</p>
-          <p>勇登是301至900之间，</p>
-          <p>卓登是901至2500之间，</p>
-          <p>稀登是2501至6000之间，</p>
-          <p>承登是6001至15000之间。</p>
-          <p>每天下午开始抢狗，有9个时间点：14:00 15:00、16:30、17:00、17:30、19:30、 20:00、20:30、21:00。
-          记得提前预约和定好闹钟哦！</p>
-          <p>华登区块狗好不好抢？</p>
-          <p>1、提前预约！（反正没抢到的，微分会退还）。</p>
-          <p>2、每个时间起点前，都会有90秒倒计时！读秒到10的时候刷新页面（戳左下角“狗狗集市”），读到5秒时开始频繁点击，直至到时！页面开始显现“黄框翻转”。</p>
-          <p>3、如果瞬间抢狗的人多，系统有可能瞬间卡住，你就退出等待2分钟重进app，然后再查“领养记录”看有没有抢到狗。
-          狗狗每日领养时间：14:00 15:00、16:30、17:00、17:30、19:30、 20:00、20:30、21:00。</p>
-          <h2>四.华登区块狗注册链接，华登区块狗怎么注册？</h2>
-          <p>华登区块狗注册操作流程：</p>
-          <p>1、注册并填写个人信息，一证一号，需手机短信验证；</p>
-          <p>2、注册成功后，必须绑定两个以上（包括两个）的收款码，不然实名认证审核通过不了;</p>
-          <p>3、实名认证审核通后，购买30微分即可激活；</p>
-          <h2>注册链接：</h2>
-          <p><a href="http://waldengoton.lifeooo.cn/user/reg.html?p=247422" rel="nofollow">http://waldengoton.lifeooo.cn/user/reg.html?p=247422</a></p>
-          <p>或手机扫描二维码：</p>
-          <img src="./image/微信图片_20190521175919.jpg" alt="在这里插入图片描述"><br>
-          <h2>华登区块狗怎么下载？</h2>
-          <p>安卓下载地: <a href="https://down.waldengoton.com/down/app.html" rel="nofollow">https://down.waldengoton.com/down/app.html</a></p>
-          <p>苹果下载地址1：<a href="http://mgy6hfzr.mrfanfood.cn/EpbW12" rel="nofollow">http://mgy6hfzr.mrfanfood.cn/EpbW12</a></p>
-          <p>苹果下载地址2：<a href="http://icb4t.39z.xindelong.com.cn/bazZM" rel="nofollow">http://icb4t.39z.xindelong.com.cn/bazZM</a></p>
-          <p>如果下载不了是因为：手机默认拦截其不认识的软件下载，一般需要在“设置”-“通用”里更改。不同品牌手机的设置有些不同，请自己百度。</p>
-          <p>（华登高通区块狗添加微信号：ZHTing6666）</p>
-          <p>注：添加微信请备注-华登区块狗</p>
+          <h1 style="text-align:center;font-size:1.5em;">好省APP注册与下载</h1>
+          <h2>一.好省APP是什么？</h2>
+          <p>好省创始团队从2015年1月公司成立起就涉足电商导购领域。2015年7月，总计获A轮融资2400万元。好省现有员工200余名，公司的核心岗位，由分别来自阿里巴巴、腾讯、网易、蘑菇街等一线互联网公司的技术大牛和产品大神组成。</p>
+          <p>公司致力于打造以分享为核心的全新社交电商新平台。好省App是杭州嘉洁网络推出的手机优惠购物移动软件。好省App让用户的网络购物可以通过好省赚钱也可以省钱。消费者网购用户注册后获取省钱口令，可以无限领取购物优惠券；合伙人用户向朋友推荐商品还可以享受高额佣金奖励。好省App下载，请通过好省App官网扫码</p>
 
-          </div>
-
-          <p>同样类型:<a href="index1.html">蜜蜂乐园</a></p>
+          <h2>二.好省APP自己做店主</h2>
+          <p>好省APP提供免费的平台，让用户享受优惠券购物同时自己做店主；</p>
+          <p>全方位服务支持</p>
+          <p>1、选品支持：好省每日精选海量超值优惠商品，包括【聚划算特卖】、【销量榜单】、【今日必抢】、【9.9包邮】等供你选择</p>
+          <p>2、技术支持：每日爆款高质量图片、文案素材，强大的团队帮你搞定，商品一键分享</p>
+          <p>3、培训支持：专业培训团队，提供分阶段精准性培训，助力打造个人IP影响力</p>
+          <p>4、客服支持：强大客服团队，用专业、耐心、速度 ，解决一切平台问题</p>
+          <p>5、个人号返利：①名片裂变，快速推广②阶梯返利，支持精细化运营③提现秒到，轻松省时④增强用户粘性，解决用户流失问题</p>
+          <p>6、云发单模式：不仅可以发送至微信群还可以发送至朋友圈，商品经过懒懒运营挑选并配有精美视频、图片、文案，可以直接用自己的微信号发单不影响手机微信使用</p>
+          <p>7、小程序支持： ①自动裂变，覆盖面广② 涵盖拼多多、京东、唯品会、大牌秒杀等商品优 ③无需下载APP，即可闪电购物</p>
           
+          <h2>三、好省产品</h2>
+          <p>好省是一款电子商务平台商品智能导购APP，以“分享+消费”为核心，自购省与分享赚双线并行，引领消费模式全面升级。</p>
+          <p>好省网罗全网购物平台，涵盖淘宝、天猫、京东、苏宁、唯品会、拼多多等，让用户不但可以领取隐藏优惠券购物，更能够通过分享赚取佣金</p>
+          <p>淘宝天猫优惠券：好省为广大用户提供海量淘宝天猫隐藏优惠券，致力于帮助用户买到最具性价比的网购商品。</p>
+          <img src="./image/007YoCw8ly4g7n7fwy9xmj30u00u0ncs.jpg" alt="好省APP">
+          <P>拼多多优惠券：好省联手拼多多放出海量隐藏优惠券，领券后单人即可成团，到手价为拼团价—优惠券额度，还有购物佣金可获得。</P>
+          <img src="./image/007YoCw8ly4g7n7fwvfhfj316m0u0q7x.jpg" alt="好省APP">
+          <P>大牌秒杀：大牌秒杀是18年9月刚上的专栏，属于好省的自营项目。好省已经与全球百个一线品牌和顶级供应商达成战略合作关系，包括欧美、日韩、澳洲等众多行业，所有品牌商品都已获得正规授权，例如阿迪达斯、耐克、达芙妮、ISDIN、HABA、FILORGA等。好省可以保证大牌秒杀商品100%正品，假一赔十。</P>
+          <img src="./image/007YoCw8ly4g7n7fwsdcdj30hs06twex.jpg" alt="好省APP">
+          <P>全品类生活优惠券：外卖券、出行券、快餐券、娱乐券、网购券应有尽有，合作平台涵盖饿了么、美团、大众点评、猫眼电影、滴滴、摩拜、各大会员等。全方位服务用户衣食住行，让用户每分钱都用在刀刃上。</P>
+          <img src="./image/007YoCw8ly4g7n7fww9vaj30ut0u0wl9.jpg" alt="好省APP">
+          <P>商城返利：好省与阿里巴巴、迪卡侬、NIKE、UGG等全球上百家知名品牌与平台达成战略合作，只要通过好省app在各大平台发生购物行为，都可以获得佣金返利奖励，全网首屈一指。</P>
+          <img src="./image/007YoCw8ly4g7n7fwvrlaj30u00u0tca.jpg" alt="好省APP">
+
+          <h2>下载地址：</h2>
+          <p><a href="https://a.app.qq.com/o/simple.jsp?pkgname=com.xiaoshijie.sqb" rel="nofollow">https://a.app.qq.com/o/simple.jsp?pkgname=com.xiaoshijie.sqb</a></p>
+          <p>或手机扫描二维码：</p>
+          <img src="./image/1.jpg" alt="好省APP"><br>
+          <p>下载完成输入邀请口令：068680;即可成为合伙人</p>
+          <p>合伙人可享受以下内容：</p>
+          <img src="./image/2.jpg" alt="好省APP">
+
           <link href="https://csdnimg.cn/release/phoenix/mdeditor/markdown_views-258a4616f7.css" rel="stylesheet">
   </article>
 
@@ -81,4 +77,4 @@
 </div>
 
 </body>
-</html>-->
+</html>
