--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         h2{font-size:16px;}
         p{font-size:14px;}
-        img{width:100%;}
+        img{width:80%; margin:0 auto;}
         a{word-wrap:break-word}
     </style>
 
