--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <img src="./image/2.jpg" alt="好省APP">
 
           <p>详细了解可添加微信：Tg-kpfy;或扫下方二维码</p>
-          <img src="微信图片_20191111165025.jpg" alt="好省APP"/>
+          <img src="./image/微信图片_20191111165025.jpg" alt="好省APP"/>
           <link href="https://csdnimg.cn/release/phoenix/mdeditor/markdown_views-258a4616f7.css" rel="stylesheet">
   </article>
 
